--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.4.1
 async-generator==1.10
 attrs==21.4.0
+blinker==1.4
+Brotli==1.0.9
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.10
@@ -10,12 +12,21 @@ crayons==0.4.0
 cryptography==36.0.1
 Django==4.0.1
 h11==0.12.0
+h2==4.1.0
+hpack==4.0.0
+hyperframe==6.0.1
 idna==3.3
+kaitaistruct==0.9
 outcome==1.1.0
+pyasn1==0.4.8
 pycparser==2.21
+pydivert==2.1.0
 pyOpenSSL==21.0.0
+pyparsing==3.0.6
+PySocks==1.7.1
 requests==2.27.1
 selenium==4.1.0
+selenium-wire==4.5.6
 six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
@@ -27,3 +38,4 @@ urllib3==1.26.7
 webdriver-manager==3.5.2
 whitenoise==5.3.0
 wsproto==1.0.0
+zstandard==0.16.0
