--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ crayons==0.4.0
 cryptography==36.0.1
 dj-database-url==0.5.0
 Django==4.0.1
+django-extensions==3.1.5
 django-gunicorn==0.1.1
 django-heroku==0.3.1
 gunicorn==20.1.0
