--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,26 @@
+amqp==5.0.9
 asgiref==3.4.1
 async-generator==1.10
 attrs==21.4.0
+billiard==3.6.4.0
 blinker==1.4
 Brotli==1.0.9
+celery==5.2.3
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.10
+click==8.0.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 colorama==0.4.4
 configparser==5.2.0
 crayons==0.4.0
 cryptography==36.0.1
+Deprecated==1.2.13
 dj-database-url==0.5.0
 Django==4.0.1
+django-celery==3.1.17
 django-extensions==3.1.5
 django-gunicorn==0.1.1
 django-heroku==0.3.1
@@ -22,7 +31,10 @@ hpack==4.0.0
 hyperframe==6.0.1
 idna==3.3
 kaitaistruct==0.9
+kombu==5.2.3
 outcome==1.1.0
+packaging==21.3
+prompt-toolkit==3.0.24
 psycopg2==2.9.3
 pyasn1==0.4.8
 pycparser==2.21
@@ -30,6 +42,8 @@ pydivert==2.1.0
 pyOpenSSL==21.0.0
 pyparsing==3.0.6
 PySocks==1.7.1
+pytz==2021.3
+redis==4.1.0
 requests==2.27.1
 selenium==4.1.0
 selenium-wire==4.5.6
@@ -41,7 +55,10 @@ trio==0.19.0
 trio-websocket==0.9.2
 tzdata==2021.5
 urllib3==1.26.7
+vine==5.0.0
+wcwidth==0.2.5
 webdriver-manager==3.5.2
 whitenoise==5.3.0
+wrapt==1.13.3
 wsproto==1.0.0
 zstandard==0.16.0
